--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -6,16 +6,17 @@
     left: 0;
     right: 0;
     z-index: 1;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
 #nav .underlay {
     position: absolute;
-    max-width: 1000px;
     width: 100%;
     height: 60px;
     margin: 0 10px;
     backdrop-filter: blur(10px);
-    background-color: rgba(255, 255, 255, 0.55)
+    background-color: rgba(255, 255, 255, 0.5)
 }
 
 #nav .container {
@@ -23,7 +24,7 @@
     justify-content: space-between;
     max-width: 1000px;
     width: 100%;
-    margin: 10px 10px 0 10px;
+    margin: 10px 0;
     border-radius: 10px;
     box-shadow: 0 0 4px cornflowerblue;
     padding: 14px;
@@ -67,4 +68,12 @@
     border-radius: 10px;
     padding: 0 10px;
     transition: 300ms;
+}
+
+/* ---------- MEDIA QUERIES ---------- */
+
+@media all and (max-width: 1000px) {
+    #nav {
+        margin: 0 10px;
+    }
 }
