--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -3,6 +3,7 @@
     justify-content: center;
     padding: 0;
     scroll-margin-top: 80px;
+    margin: 0 12px;
 }
 
 #projects .container {
@@ -161,3 +162,19 @@
     margin-bottom: 0;
 }
 
+/* ---------- MEDIA QUERIES ---------- */
+
+@media all and (max-width: 1000px){
+    #projects .title {
+        font-size: 34px;
+    }   
+
+    #projects .project {
+        max-width: 100%;
+        width: 100%;
+    }
+
+    #projects .info-wrapper{
+        height: auto;
+    }
+}
