--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -6,6 +6,7 @@
 }
 
 #contact .container {
+    position: relative;
     display: flex;
     flex-direction: column;
     padding: 0;
@@ -15,6 +16,10 @@
     border-radius: 10px;
 }
 
+#contact .title {
+    margin-bottom: 20px;
+
+}
 #contact .title span {
     color: cornflowerblue;
     font-weight: bold;
@@ -27,4 +32,142 @@
 #contact .info span {
     color: cornflowerblue;
     font-weight: bold;
+}
+
+
+/* ---------- CONTACT FORM ---------- */
+
+#contact .input-contact-info-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+#contact .input-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 49%;
+}
+
+#contact .input-wrapper .name, 
+#contact .input-wrapper .email, 
+#contact .input-wrapper .message {
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    box-shadow: 0 0 4px cornflowerblue;
+    margin-bottom: 20px;
+}
+
+#contact .input-wrapper .name:focus, 
+#contact .input-wrapper .email:focus, 
+#contact .input-wrapper .message:focus{
+    outline: 2px solid cornflowerblue;
+    box-shadow: 0 0 8px cornflowerblue;
+}
+
+#contact .input-wrapper .message {
+    height: 180px;
+    resize: none;
+}
+
+#contact .input-wrapper .send {
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    background-color: cornflowerblue;
+    color: white;
+    font-weight: bold;
+    transition: 300ms;
+}
+
+#contact .input-wrapper .send:hover {
+    transform: scale(1.025);
+    transition: 300ms;
+}
+
+#contact .input-wrapper .send:active {
+    transform: scale(1);
+    transition: 50ms;
+}
+
+/* ---------- MAIL IMG ---------- */
+
+#contact .mail-img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 49%;
+    transform: rotate(-4deg);
+}
+
+/* ---------- CONTACT INFO ---------- */
+
+#contact .contact-info-wrapper {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+#contact .contact-info-wrapper h3{
+    margin-bottom: 20px;
+}
+
+#contact .contact-info-wrapper .linkedin,
+#contact .contact-info-wrapper .resume{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+
+    max-width: 26px;
+    font-size: 26px;
+    margin: 20px 0;
+    border-radius: 50px;
+    padding: 8px 22px;
+    background-color: cornflowerblue;
+    transition: 300ms;
+}
+
+#contact .contact-info-wrapper .fa-linkedin-in, 
+#contact .contact-info-wrapper .fa-file-pdf {
+    color: white;
+    transition: 300ms;
+}
+
+#contact .contact-info-wrapper .fa-github {
+    font-size: 42.5px;
+    color: cornflowerblue;
+    transition: 300ms;
+}
+
+#contact .contact-info-wrapper .fa-linkedin-in:hover,
+#contact .contact-info-wrapper .fa-file-pdf:hover {
+    transform: scale(1.1);
+    transition: 300ms;
+}
+
+/* ---------- MEDIA QUERIES ---------- */
+
+@media all and (min-width: 750) and (max-width: 1000px){
+    #contact {
+        margin-bottom: 40px;
+    }   
+
+}
+
+@media all and (max-width: 750px){
+    #contact {
+        margin-bottom: 40px;
+    }   
+
+    #contact .mail-img {
+        display: none;
+    }
+
+    #contact .input-wrapper {
+        width: 100%;
+    }
+
+
 }
