--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -72,8 +72,17 @@
 
 /* ---------- MEDIA QUERIES ---------- */
 
-@media all and (max-width: 1000px) {
+@media all and (min-width: 370px) and (max-width: 1000px) {
     #nav {
         margin: 0 10px;
+    }
+}
+
+@media all and (max-width: 370px) {
+    #nav {
+        margin: 0 10px;
+    }
+    #nav .link-container .link {
+        font-size: 16px;
     }
 }
